log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
jue 30 mar 2023 15:19:25 -03: 
 arraylist.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
51aa6d9
jue 30 mar 2023 15:30:25 -03: 
 arraylist.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  1|5
total_score: 10/70
85d6884
jue 30 mar 2023 15:31:09 -03: 
 arraylist.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  3|4
total_score: 20/70
6b91b54
jue 30 mar 2023 15:42:25 -03: 
 arraylist.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  5|3
total_score: 30/70
e8f35cf
jue 30 mar 2023 16:02:04 -03: 
 arraylist.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
3fec925
jue 30 mar 2023 16:02:50 -03: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6e73ae1
jue 30 mar 2023 16:04:12 -03: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|2
total_score: 40/70
fbc90d8
jue 30 mar 2023 16:05:56 -03: 
 arraylist.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
 tests:  8|2
total_score: 40/70
5bf2fbe
jue 30 mar 2023 16:16:48 -03: 
 arraylist.c | 30 ++++++++++++++++--------------
 1 file changed, 16 insertions(+), 14 deletions(-)
 tests:  8|2
total_score: 40/70
05a8eec
jue 30 mar 2023 16:27:53 -03: 
 arraylist.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘pop’:
arraylist.c:61:22: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   61 |     if (i > l->size) return;
      |                      ^~~~~~
arraylist.c:60:7: note: declared here
   60 | void* pop(ArrayList * l, int i){
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
11fcf55
